edited project path to image

--- a/digital-ad-comp.html
+++ b/digital-ad-comp.html
@@ -13,5 +13,5 @@
 </style>
 
 <div class="center-image">
-<img src="M:\PR\Advertisements\2022\DJC HC-Biotech 220323\DJC-digital-ad-HC+Biotech-nearestNeighbor.png" width=400px; />
+<img src="image\DJC-digital-ad-HC+Biotech-nearestNeighbor.png" width=400px; />
 </div>
