final image for submission and minor text edits

--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 </style>
 
 <div class="center-image">
-<img src="image\DJC-digital-ad-HC+Biotech-nearestNeighbor.png" width=400px; />
+<img src="image\AEI_April2022_tile.png" width=400px; />
 </div>
